--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <a class="nav-link" href="">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Eventos</a>
+                <a class="nav-link" href="">Blitz</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">El lugar</a>
+                <a class="nav-link" href="">Gestoria</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Galeria</a>
+                <a class="nav-link" href="">Contacto</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="">Contacto</a>
@@ -37,9 +37,9 @@
         </div>
     </nav>
 
-    <main class="">
+    <main class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
         <div class="titulo">
-            <div class="titulo1 col-xxl-4 col-xl-4 col-lg-8 col-md-12 col-sm-12">
+            <div class="titulo1 col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-4">
             <h1><span class="feD">Fed</span>Motos</h1>
             <p>Embarca a tu proximo destino, conoce BLITZ</p>
             <button type="button" class="btn btn-outline-warning">Ver mas</button>
@@ -87,22 +87,35 @@
         </div>
         
     </section>
+
+    <section>
     <article class="especifiC col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
-        <div class="especifiC1 col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-4">
+        <div class="especifiC1 col-xxl-4 col-xl-12 col-lg-12 col-md-12 col-sm-12">
             <h2>Blitz 110 V8 Automática</h2>
-            <p>Pensada para quienes buscan una alternativa de transporte económico e independiente o quieren vivir su primera experiencia en una moto. La mejor inversión gracias a la relación precio / calidad, bajo costo de mantenimiento y consumo reducido de su motor OHC, silencioso y de bajas emisiones contaminantes. Incorpora una óptica homologada con gran rango de iluminación. Una moto de fácil conducción para el uso diario recurrente.</p>
+            <p class="especifiC1-1">Pensada para quienes buscan una alternativa de transporte económico e independiente o quieren vivir su primera experiencia en una moto. La mejor inversión gracias a la relación precio / calidad, bajo costo de mantenimiento y consumo reducido de su motor OHC, silencioso y de bajas emisiones contaminantes. Incorpora una óptica homologada con gran rango de iluminación. Una moto de fácil conducción para el uso diario recurrente.</p>
         </div>
-        <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-4">
-            <p class="especifiC2 ">Pintura<br>Pintura exclusiva perlada con protección UV</p> 
-            <p class="especifiC2 ">Asiento<br>Asiento antideslizante combinado con material SOFT TOUCH</p> 
-            <p class="especifiC2 ">Arranque<br>Arranque eléctrico y por patada</p>  
+        <div class="col-xxl-4 col-xl-6 col-lg-12 col-md-12 col-sm-12">
+            <p class="especifiC2 "><span class="bolD"> Pintura</span><br>Pintura exclusiva perlada con protección UV</p> 
+            <p class="especifiC2 "><span class="bolD">Asiento</span><br>Asiento antideslizante combinado con material SOFT TOUCH</p> 
+            <p class="especifiC2 "><span class="bolD">Arranque</span><br>Arranque eléctrico y por patada</p>  
         </div>
-        <div class=" col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-4">
-            <p class="especifiC3 ">Motor<br>Motor CG</p> 
-            <p class="especifiC3 ">Consumo<br>Consumo reducido</p> 
-            <p class="especifiC3 ">Amortiguadores<br>Amortiguadores regulables</p>  
+        <div class=" col-xxl-4 col-xl-6 col-lg-12 col-md-12 col-sm-12">
+            <p class="especifiC3 "><span class="bolD">Motor</span><br>Motor CG</p> 
+            <p class="especifiC3 "><span class="bolD">Consumo</span><br>Consumo reducido</p> 
+            <p class="especifiC3 "><span class="bolD">Amortiguadores</span><br>Amortiguadores regulables</p>  
         </div>
     </article>
+    </section>
+    <section class="usadosAccesorios col-xxl-12 col-lg-12 col-xl-12 col-md-12 col-sm-12">
+        <div class="usadoS col-xxl-5 col-lg-5 col-xl-8 col-md-8 col-sm-8">
+            <img src="img/usados.jpg" width="100em" height="100em" alt="">
+            <h2 class="start">USADOS SELECCIONADOS</h2>
+        </div>
+        <div class="usadoS col-xxl-5 col-lg-5 col-xl-5 col-md-5 col-sm-5">
+            <img src="img/casco.png" width="100em" height="100em" alt="">
+            <h2 class="start">ACCESORIOS</h2>
+        </div>
+    </section>
 
     
 
